[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
tx-utils = { path = "../tx-utils" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
hex = "0.4.3"
rand = "0.8.5"
cursive = "0.20.0"
indexmap = "2.2.6"
jsonrpsee= { workspace = true }
rpc = { workspace = true }
tokio = { workspace =true }

[[bin]]
name = "user_tui"
path = "src/user_tui.rs"