[package]
name = "tx_prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sha2 = "0.10.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = true,features = ["std"]}
